--- a/player.html
+++ b/player.html
@@ -346,7 +346,7 @@
                         </svg>
                         <span class="gradient-text font-bold">柠七影视</span>
                     </div>
-                    <p class="text-gray-500 text-sm mt-2 text-center md:text-left">© 2025 柠七影视 - 自由观影，畅享精彩</p>
+                    <p>© 2025 柠七影视 - 自由观影，畅享精彩</p>
                 </div>
                 <div class="text-center md:text-right">
                     <p class="text-gray-500 text-sm max-w-md">
